css/main.css
html {
  box-sizing: border-box;
  font-family: sans-serif;
  line-height: 1.5;
}

*, *::before, *::after {
  box-sizing: inherit;
}

body: {
  margin 0;
}

img {
  width: 100%;
}
header {
  display: flex;
  justify-content: space-between;
  background-color: #e2e2e2;
  align-items: center;
  padding: 1rem;
}

header img {
  width: 2rem;
  order: -1;
  margin-right: .5rem;
}

h1 {
  margin: 0;
}

header p {
  margin: 0 auto;
}

nav ul {
  margin: 0;
  list-style-type: none;
  display: flex;
}

nav a {
  text-decoration: none;
  color: #0074d9;
  padding: .75em 1em .6em;
}

